--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,18 @@
   <groupId>com.example.maven-project</groupId>
   <artifactId>maven-project</artifactId>
   <packaging>pom</packaging>
-  <version>1.0</version>
+  <version>1.0-SNAPSHOT</version>
   <distributionManagement>
    <snapshotRepository>
       <id>nexus-snapshots</id>
-      <url>http://3.0.91.70:8081/repository/maven-snapshots/</url>
+      <url>http://18.136.107.69:8081/repository/maven-snapshots/</url>
    </snapshotRepository>
    <repository>
       <id>nexus-releases</id>
-      <url>http://3.0.91.70:8081/repository/maven-releases/</url>
+      <url>http://18.136.107.69:8081/repository/maven-releases/</url>
    </repository>
-</distributionManagement>
-	<name>Maven Project</name>
+  </distributionManagement>
+  <name>Maven Project</name>
   <description>Sample Maven project with a working, deployable site.</description>
   <url>http://www.example.com</url>
 
@@ -31,6 +31,13 @@
     <module>webapp</module>
   </modules>
 
+  <distributionManagement>
+    <site>
+      <id>site-server</id>
+      <name>Test Project Site</name>
+      <url>file:///tmp/maven-project-site</url>
+    </site>
+  </distributionManagement>
 
   <build>
     <plugins>
