--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>maven-project</artifactId>
   <packaging>pom</packaging>
   <version>1.0</version>
-  <distributionManagement>
+<!--  <distributionManagement>
    <snapshotRepository>
       <id>nexus-snapshots</id>
       <url>http://13.232.226.61:8081/repository/maven-snapshots/</url>
@@ -16,7 +16,7 @@
       <id>nexus-releases</id>
       <url>http://13.232.226.61:8081/repository/maven-releases/</url>
    </repository>
-  </distributionManagement>
+  </distributionManagement>  -->
   <name>Maven Project</name>
   <description>Sample Maven project with a working, deployable site.</description>
   <url>http://www.example.com</url>
